incorrect image name

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     build:
       dockerfile: ./docker/devbox.dockerfile
       context: .
-    image: "wayfair/columbo-devbox"
+    image: "wayfair/pygitops-devbox"
     volumes:
       - ./:/app
 
