--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,21 @@
 version: '3.4'
 services:
+
+  # a fully loaded development environment to test new code
+  devbox: &devbox
+    build:
+      dockerfile: ./docker/devbox.dockerfile
+      context: .
+    image: "wayfair/pygitops-devbox"
+    volumes:
+      - ./:/app
+
+  # run all the tests and linting locally
+  # - black & isort will format code to address issues
+  test:
+    <<: *devbox
+    command: docker/run_tests.sh --format-code
+
   # generate and serve the project documentation locally
   mkdocs:
     image: "squidfunk/mkdocs-material:6.0.2"
