--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,4 +5,5 @@ edit_uri: edit/main/docs/
 docs_dir: docs
 nav:
   - Overview: index.md
+  - Development Guide: development-guide.md
 theme: material
