--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ docs_dir: docs
 nav:
   - Overview: index.md
   - Development Guide: development-guide.md
+  - Reference: api.md
 theme: material
 markdown_extensions:
   - admonition
@@ -13,3 +14,16 @@ markdown_extensions:
   - pymdownx.highlight
   - pymdownx.keys
   - pymdownx.superfences
+plugins:
+  - mkdocstrings:
+      handlers:
+        python:
+          selection:
+            docstring_style: "restructured-text"
+          rendering:
+            heading_level: 3
+            show_root_heading: True
+            show_source: False
+            show_root_full_path: False
+extra_css:
+  - css/mkdocstrings.css
