--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,6 +3,8 @@ black==20.8b1
 flake8==3.8.4
 isort==5.7.0
 mypy==0.790
+mkdocs-material==6.2.4
+mkdocstrings==0.14.0
 pytest==6.2.1
 pytest-cov==2.10.1
 pytest-mock==3.5.1
