Adding support for python3.9 in dockerfiles and CI
Fixes #55

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: CI
 on: [push, pull_request]
 
 env:
-  PYTHON_VERSION: "3.8.5"
+  PYTHON_VERSION: "3.9.1"
 
 jobs:
   bandit:
@@ -94,7 +94,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
     steps:
         - name: Check out code
           uses: actions/checkout@v2
