--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,7 @@ exclude = '''
 line_length=88
 multi_line_output=3
 include_trailing_comma=true
+
+[build-system]
+requires = ["setuptools >= 40.9.0", "wheel"]
+build-backend = "setuptools.build_meta"
