--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ python_requires = >=3.6
 install_requires =
     dataclasses~=0.8; python_version < '3.7'
     filelock~=3.0
-    tGitPython~=3.1
+    GitPython~=3.1
 packages = find:
 
 [options.packages.find]
