--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = pygitops
 url = https://github.com/wayfair-incubator/pygitops
-author = 
-author_email = 
+author = Josh Woodward
+author_email = josh.woodward2693@gmail.com
 version = 0.10.0
 description = Wrapper for low-level git logic. Useful for systems automating git operations.
 long_description = file: README.md
