--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Overview: index.md
   - Usage Guide:
     - making-changes-on-feature-branch.md
+  - Why pygitops?: why-pygitops.md
   - Development Guide: development-guide.md
   - Reference: api.md
 theme: material
