Adding usage guide highlighting the get_updated_repo function

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Overview: index.md
   - Usage Guide:
     - making-changes-on-feature-branch.md
+    - updating-repo.md
   - Why pygitops?: why-pygitops.md
   - Development Guide: development-guide.md
   - Reference: api.md
