--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     image: "wayfair/pygitops-devbox"
     volumes:
       - ./:/app
+      - ~/.gitconfig:/home/pygitops/.gitconfig
 
   # run all the tests and linting locally
   # - black & isort will format code to address issues
@@ -23,3 +24,7 @@ services:
     ports:
       - "8000:8000"
     command: ["serve", "--dev-addr=0.0.0.0:8000"]
+
+  mike:
+    <<: *mkdocs
+    entrypoint: "mike"
