--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: CI
 
-# Triggers the workflow on push or pull request
-# events, but only for the main branch
-on: [push, pull_request]
+# Workflow does NOT trigger on a feature branch until a pull request is created.
+# Workflow will always run when a pull request is merged to the default branch.
+on:
+  pull_request: {}
+  push:
+      branches: ["main"]
 
 env:
   PYTHON_VERSION: "3.9.1"
@@ -132,31 +135,50 @@ jobs:
             file: coverage-${{ matrix.python-version }}.xml
             fail_ci_if_error: true
 
-
   build-docs:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+    if: github.event_name == 'pull_request'
     steps:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Build Docs
-        run: docker-compose run --rm mkdocs build --strict
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
 
-      # publish dev docs
-      - name: Publish (dev)
-        if: github.ref != 'refs/heads/main'
+      - name: Install dependencies
+        uses: ./.github/actions/install-dependencies
+        with:
+          requirements: "true"
+          test-requirements: "true"
+
+      - name: Build Docs
+        run: mkdocs build --strict
+
+      - name: Upload coverage results artifact
         uses: actions/upload-artifact@v2
         with:
           name: docs-site
           path: site/
 
-      # publish prod docs
-      - name: Publish (prod)
-        if: github.ref == 'refs/heads/main'
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: site
+  update-dev-docs:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
+      - uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install dependencies
+        uses: ./.github/actions/install-dependencies
+        with:
+          requirements: "true"
+          test-requirements: "true"
+
+      - name: Push documentation changes
+        uses: ./.github/actions/publish-docs-with-mike
+        with:
+          version_name: dev
