--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,7 +155,7 @@ jobs:
       - name: Build Docs
         run: mkdocs build --strict
 
-      - name: Upload coverage results artifact
+      - name: Upload docs as an artifact
         uses: actions/upload-artifact@v2
         with:
           name: docs-site
