Restrict version range of gitpython

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = pygitops
 url = https://github.com/wayfair-incubator/pygitops
 author = Josh Woodward
 author_email = josh.woodward2693@gmail.com
-version = 0.10.0
+version = 0.10.1
 description = Wrapper for low-level git logic. Useful for systems automating git operations.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -24,7 +24,7 @@ python_requires = >=3.6
 install_requires =
     dataclasses~=0.8; python_version < '3.7'
     filelock~=3.0
-    GitPython~=3.1
+    GitPython>=3.1,<=3.1.18
 packages = find:
 
 [options.packages.find]
