--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,10 @@
 version: '3.4'
+
+x-mount-app-and-user-git-config: &mount-app-and-user-git-config
+  volumes:
+    - ./:/app
+    - ~/.gitconfig:/home/gbq/.gitconfig # allow script to commit as user
+
 services:
 
   # a fully loaded development environment to test new code
@@ -28,3 +34,8 @@ services:
   mike:
     <<: *mkdocs
     entrypoint: "mike"
+
+  bump:
+    <<: *devbox
+    <<: *mount-app-and-user-git-config
+    entrypoint: docker/bump_version.sh
