--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
       branches: ["main"]
 
 env:
-  PYTHON_VERSION: "3.9.1"
+  PYTHON_VERSION: "3.10"
 
 jobs:
   bandit:
@@ -98,7 +98,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
     steps:
         - name: Check out code
           uses: actions/checkout@v2
