Do not fail CI for docs build error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,6 +139,7 @@ jobs:
   build-docs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    fail_ci_if_error: false
     steps:
       - name: Check out code
         uses: actions/checkout@v2
