--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -155,7 +155,8 @@ jobs:
 
       - name: Build Docs
         run: mkdocs build --strict
-        fail_ci_if_error: false
+        with:
+          fail_ci_if_error: false
 
       - name: Upload docs as an artifact
         uses: actions/upload-artifact@v2
