Continue on failure

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,6 +139,7 @@ jobs:
   build-docs:
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
+    continue-on-error: true
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -155,8 +156,6 @@ jobs:
 
       - name: Build Docs
         run: mkdocs build --strict
-        with:
-          fail_ci_if_error: false
 
       - name: Upload docs as an artifact
         uses: actions/upload-artifact@v2
