--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,8 +138,7 @@ jobs:
 
   build-docs:
     runs-on: ubuntu-latest
-#    if: github.event_name == 'pull_request'
-    if: false
+    if: github.event_name == 'pull_request'
     continue-on-error: true
     steps:
       - name: Check out code
