--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
         - name: Check out code
           uses: actions/checkout@v2
@@ -131,7 +131,7 @@ jobs:
           if: ${{ always() }}
 
         - name: Publish coverage results to Codecov
-          uses: codecov/codecov-action@v2.1.0
+          uses: codecov/codecov-action@v3.1.0
           with:
             file: coverage-${{ matrix.python-version }}.xml
             fail_ci_if_error: true
